crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__reduce-reactive-deps__infer-nested-function-uncond-access-local-var.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/reduce-reactive-deps/infer-nested-function-uncond-access-local-var.tsx
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
import { shallowCopy, Stringify, mutate } from "shared-runtime";
function useFoo(t0) {
	const $ = _c(4);
	const { a } = t0;
	let local;
	if ($[0] !== a) {
		local = shallowCopy(a);
		mutate(local);
		$[0] = a;
		$[1] = local;
	} else {
		local = $[1];
	}
	let t1;
	if ($[2] !== local) {
		const fn = () => [() => local.b.c];
		t1 = <Stringify fn={fn} shouldInvokeFns={true} />;
		$[2] = local;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{ a: null }],
	sequentialRenders: [{ a: null }, { a: { b: { c: 4 } } }]
};
