crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__reduce-reactive-deps__infer-object-method-uncond-access.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/reduce-reactive-deps/infer-object-method-uncond-access.tsx
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
import { identity, Stringify } from "shared-runtime";
function useFoo(t0) {
	const $ = _c(2);
	const { a } = t0;
	let t1;
	if ($[0] !== a) {
		const x = { fn() {
			return identity(a.b.c);
		} };
		t1 = <Stringify x={x} shouldInvokeFns={true} />;
		$[0] = a;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{ a: null }],
	sequentialRenders: [{ a: null }, { a: { b: { c: 4 } } }]
};
